Fix border flicker bug Fix fadeIn for hexagram

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -68,7 +68,7 @@ h1 {
 }
 
 .cast-area {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-evenly;
   width: auto;
